# ot-server-860-2026

./: .gitignore  README.md
OTServico/: CMakeLists.txt  COMPILAR_NO_WSL.md  INSTALAR_MYSQL_UBUNTU.md  INSTALAR_PUTTY_WINSCP_ORACLE_CLOUD_INFRASTRUCTURE.md
OTServico/cmake/: FindCrypto++.cmake  FindLTO.cmake
OTServico/data/: IMBUEMENTS_MANUAL.md  SHOP_INGAME_MANUAL.md
OTServico/data/XML/: groups.xml  skillstages.xml  stages.xml
OTServico/data/actions/: actions.xml
OTServico/data/actions/scripts/: imbuement.lua
OTServico/data/creaturescripts/: creaturescripts.xml
OTServico/data/creaturescripts/scripts/others/: extendedopcode_shop.lua
OTServico/data/events/scripts/: player.lua
OTServico/data/lib/core/: core.lua  imbuements.lua  shop_client.lua
OTServico/data/migrations/: 001_ingame_shop.sql
OTServico/data/talkactions/: talkactions.xml
OTServico/data/talkactions/scripts/: imbue.lua
OTServico/data/world/: Untitled-1-spawn.xml
OTServico/src/: connection.cpp  lockfree.h  luascript.cpp  outputmessage.cpp  tools.cpp
otclientv8/: init.lua
otclientv8/modules/client_options/: interface.otui  options.lua  options.otui
otclientv8/modules/game_imbuing/: imbuing.lua
otclientv8/modules/game_interface/: interface.otmod
otclientv8/modules/game_itemhover/: itemhover.lua  itemhover.otmod
otclientv8/modules/game_shop/: shop.lua
otclientv8/modules/gamelib/: textmessages.lua
otclientv8/modules/gamelib/ui/: uiitem.lua
